--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,4 +1,11 @@
 .map{
+  &-info {
+    width: 60%;
+    margin: 0 auto;
+  }
+  &-name {
+    font-size: 1.5rem;
+  }
   &-content {
   background-color: #f6f6d1;
   min-height: 100%;
@@ -14,6 +21,7 @@
       width: 55px;
       height: 50px;
       border-radius: 50%;
+      border: 2px solid  rgb(192, 189, 189);
     }
     &_image {
       background-color: white;
@@ -24,4 +32,35 @@
     display: flex;
     text-align: center;
   }
+  &-text {
+    border: solid;
+    border-width: 0 2px 2px 2px;
+    font-size: 1.5rem;
+  }
+  &-school {
+    margin-top: 10%;
+    font-size: 1.8rem;
+    text-align: center;
+    border: solid 2px;
+  }
+  &-image {
+    border: solid;
+    border-width: 0 2px 2px 2px;
+    background: cover;
+    margin: initial;
+    width: 100%;
+    &_content {
+      width: 100%;
+    }
+  }
+}
+
+#map {
+  height: 60%;
+  width: 60%;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:left;
+  border: solid;
+  border-width: 0 2px 2px 2px;
 }
