--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,7 +4,7 @@
     <% @anotherEntries.each do |room| %>
       <div class="col-xs-12 col-md-6 col-lg-3 mt-3 card">
         <%= link_to "#{room.user.nickname}とのDM",room_path(room.room.id) %>
-        <div class="user-list-image">
+        <div class="user-list-image border-bottom">
           <% if room.user.image.present?%>
             <%= link_to image_tag("#{room.user.image}",class: "user-icon mt-3"),room_path(room.room.id) %>
           <% else %>
