リンク付与

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,5 +1,8 @@
 <div class="map-content">
-  <%= link_to "投稿",new_map_path(tournament_id: params[:tournament_id]) %>
+  <div class="text-center">
+    <h3 class="pt-4">出場校のふるさとを紹介してみませんか！？</h3>
+    <%= link_to "投稿する",new_map_path(tournament_id: params[:tournament_id]),class: "ays-avg" %>
+  </div>
   <div class="map-list row">
     <% @maps.each do |map| %>
       <div class="col-xs-12 col-md-6 col-lg-3 mt-3 mb-5 map-card">
@@ -7,7 +10,7 @@
           <%= link_to "#{map.school.name}","maps/#{map.id}" %>
         </div>
         <div class="map-user pt-5">
-          投稿者 <%= map.user.nickname %>
+          投稿者 <%= link_to "#{map.user.nickname}","/users/#{map.user.id}" %>
         </div>
         <div class="map-user_image">
           <% if map.user.image.present?%>
