--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -27,6 +27,11 @@
   -1px 0 0 #FFF, 1px 0 0 #FFF;
 }
 
+.logo {
+  font-weight: bold;
+  font-size: 2.0rem;
+}
+
 .top-main {
   background-size: cover;
   background-position: center center;
@@ -42,8 +47,8 @@
   justify-content: space-between;
 }
 
-.info,.mypage,.logout,.contact-header,.login,.top_sign_up,.guest-login {
-  color: rgba(29,161,242,1.00);;
+.info,.mypage,.logout,.contact-header,.login,.top_sign_up,.guest-login,.logo {
+  color: rgba(29,161,242,1.00);
 }
 
 .top_sign_up {
