--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,13 +1,15 @@
 .map{
+  background-image: image-url('japan.jpg');
+  background-size: 300px 300px;
   &-info {
-    width: 60%;
+    width: 45%;
     margin: 0 auto;
   }
   &-name {
     font-size: 1.5rem;
   }
   &-content {
-  background-color: #f6f6d1;
+  background-color: #f6f6d1;;
   min-height: 100%;
   }
   &-card {
@@ -35,13 +37,15 @@
   &-text {
     border: solid;
     border-width: 0 2px 2px 2px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    background-color: #f6f6d1;
   }
   &-school {
     margin-top: 10%;
     font-size: 1.8rem;
     text-align: center;
     border: solid 2px;
+    background-color: #f6f6d1;
   }
   &-image {
     border: solid;
@@ -57,7 +61,7 @@
 
 #map {
   height: 60%;
-  width: 60%;
+  width: 45%;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
