--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -24,9 +24,14 @@
     position: absolute;
     width: 10%;
   }
+  
   &:hover {
     opacity: 0.5;
   }
+}
+
+.data-info {
+  background-color: #EEFFFF;
 }
 
 .select_main{
@@ -125,19 +130,29 @@
   font-size: 30px;
   text-align: center;
   margin-top: 130px;
+  color: #68ccf9;;
+  font-weight: bold;
 }
 
 .ays-text {
   margin-top: 40px;
-  border: 1px solid #b3b4b4;
   width: 100%;
   max-width: 100%;
   min-width: 200px;
+  width: 0;
+  font-size: 1.2rem;
+}
+
+.data-title {
+  color: #00CCCC;
+  font-weight: bold;
+  font-size: 1.5rem;
+  border-bottom: 2px solid #77c3df;;
 }
 
 .reader {
-  margin-top: 110px;
-  display: flex;
+  margin-top: 3%;
+  margin-left: 20%;
 }
 
 @media screen and (max-width: 966px) {
