ゲスト　新規　位置

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -53,12 +53,12 @@
 
 .top_sign_up {
   position: absolute;
-  left: 270px;
+  left: 28%;
 }
 
 .guest-login {
   position: absolute;
-  left: 110px;
+  left: 15%;
 }
 
 .new_info {
