--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -33,7 +33,7 @@
       <div class="data-title mt-5 ml-5">
         分析詳細
       </div>
-      <div class="ays-text mr-2 ml-5">
+      <div class="ays-text mt-5 ml-5">
         <%= simple_format(@analysis.text)%>
       </div>
       <div class="data-title mt-5 ml-5">
