--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -43,11 +43,14 @@
   text-align: center;
 }
 
-.Pie {
-  display: flex;
+.fcs-text {
+  font-size: 1.2rem;
 }
 
-.fcs-text {
-  width: 100%;
-  border: 1px solid #b3b4b4;
+.pie {
+  margin-left: 29%;
+}
+
+.content-fcs_show {
+  background-color: #EEFFFF;
 }
