--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -1,12 +1,13 @@
 <div class="forecast-show_content">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <div class="content-fcs_show">
+    <%# ボタン %>
     <div class="choose-btn pt-3">
       <% if current_user.id == @forecast.user_id || current_user.admin? %>
         <%= link_to "記事を削除する","/forecasts/#{@forecast.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
         <%= link_to "記事を編集する","/forecasts/#{@forecast.id}/edit",method: :get,class: "edit-article" %>
       <% end %>
-        <%= link_to "予想ページへ戻る",forecasts_path,class: "return-btn" %>
+      <%= link_to "予想ページへ戻る",forecasts_path,class: "return-btn" %>
     </div>
     <div class="user_name">
       <h5>投稿者 <%= link_to "#{@forecast.user.nickname}","/users/#{@forecast.user_id}"%></h5>
@@ -16,6 +17,7 @@
         <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"/users/#{@user.id}" %>
       <% end %>
     </div>
+    <%# 予想内容 %>
     <div class="text-format text-danger">
       <%= @forecast.tournament.name%><br>
       <i class="fas fa-fire mt-5 mb-5">試合予想</i>
