--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -2,6 +2,7 @@
   <div class="text-center">
     <h3 class="pt-4">出場校のふるさとを紹介してみませんか！？</h3>
     <%= link_to "投稿する",new_map_path(tournament_id: params[:tournament_id]),class: "ays-avg" %>
+    <%= link_to "戻る","/tournaments/#{@id}/watch_ays",class: "ays-avg" %>
   </div>
   <div class="map-list row">
     <% @maps.each do |map| %>
