--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -34,7 +34,7 @@
       <%= link_to "記事を削除する","/maps/#{@map.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
       <%= link_to "記事を編集する","/maps/#{@map.id}/edit",method: :get,class: "edit-article" %>
     <% end %>
-    <%= link_to "戻る",maps_path,class: "return-top ml-1" %>
+    <%= link_to "戻る",maps_path(tournament_id: @map.tournament.id),class: "return-top ml-1" %>
   </div>
   <div class="map-info">
     <div class="map-school">
