--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -27,21 +27,27 @@
   padding-top: 30px;
   padding-bottom: 10px;
   display: flex;
-  justify-content: space-evenly;
+  &-content {
+    min-height: 100%;
+    background-color: #EEFFFF;
+  }
 }
 
-.avg-expec {
-  font-size: 20px;
-  margin-left: -40px;
+.avg-font {
+  margin-left: 12%;
+  font-size: 1.2rem;
 }
 
-.avg-attack,.avg-defense,.avg-pitch,.avg-total {
-  margin-left: -200px;
-  font-size: 20px;
+.avg-attack,.avg-defense,.avg-pitch,.avg-total,.avg-expec {
+  font-size: 1.2rem;
 }
 
 .avg-name {
-  font-size: 25px;
+  font-size: 30px;
+  margin-top: 5%;
+  text-align: center;
+  color: #68ccf9;;
+  font-weight: bold;
 }
 
 .go-avg {
