戻るボタン

--- a/app/views/contacts/done.html.erb
+++ b/app/views/contacts/done.html.erb
@@ -3,5 +3,5 @@
   <div class="contact-end text-center mt-5">
     <p>メッセージをいただきありがとうございました</p>
   </div>
-  <%= link_to "戻る",root_path,class: "return-top mt-4" %>
+  <%= link_to "戻る",contacts_path,class: "contact-return mt-4" %>
 </div>
