クラス名変更

--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -51,7 +51,7 @@
     <% end %>
   </div>
   <%# コメント %>
-  <div class="comment-content">
+  <div class="comment-content_tweet">
     <div class="comment">   
       <div class="text-format mt-0 mb-4 text-warning">
       <i class="fa fa-baseball-ball text-warning"></i>
