--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -66,7 +66,11 @@ input {
   }
   &-content {
     background-color: rgba(236, 236, 206,0.4);
-    min-height: 780px;
+    // min-height: 780px;
+    &_tweet {
+      background-color: rgba(236, 236, 206,0.4);
+      min-height: 780px;
+    }
   }
   &-user {
     font-size: 15px;
