--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -76,9 +76,9 @@
     </div>
     <div class="comment-form"> 
       <% if current_user %>
-        <%= form_with(model:[@tweet, @comment], method: :post) do |f| %>
-          <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
-          <input type="submit" value="SENT" class="game_record">
+        <%= form_with(model:[@tweet, @comment], local: true,id: "new_comment") do |f| %>
+          <%= f.text_area :text,placeholder: "コメント",rows: "2",cols: "30" %>
+          <%= f.submit "SEND",class: "game_record"%>
         <% end %>
       <% end %>
     </div>
