--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -84,8 +84,8 @@
     <div class="comment-form"> 
     <% if current_user %>
       <%= form_with(model:[@analysis, @comment], method: :post) do |f| %>
-        <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
-        <input type="submit" value="SENT" class="game_record">
+        <%= f.text_area :text,placeholder: "コメント",rows: "2",cols: "30" %>
+        <%= f.submit "SEND",class: "game_record"%>
       <% end %>
     <% end %>
     </div>
