--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -81,8 +81,8 @@
       <!-- ここからフォーム -->
       <% if current_user %>
         <%= form_with(model:[@forecast, @comment], method: :post) do |f| %>
-          <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
-          <input type="submit" value="SENT" class="game_record">
+          <%= f.text_area :text,placeholder: "コメント",rows: "2",cols: "30" %>
+          <%= f.submit "SEND",class: "game_record"%>
         <% end %>
       <% end %>
       </div>
