--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -70,9 +70,11 @@
               <%= @num %>:
               <strong><%= link_to "#{comment.user.nickname}","/users/#{comment.user.id}",class: "pr-4" %></strong>
               <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
+            <div class="comment-delete">
               <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
                 <%= link_to '削除', "/analyses/#{@analysis.id}/comment_analyses/#{comment.id}", method: :delete,class: "comment_delete-button" %>
               <% end %>
+            </div>
             </div>
           <div class="mt-4 mb-4">
             <%= simple_format(comment.text) %>
