--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -38,6 +38,14 @@
   flex: 1 1 100%;
 }
 
+.search-fcs {
+  background-image: image-url("sky_00148.jpg");
+  background-size: cover;
+  background-color:rgba(255,255,255,0.5);
+  background-blend-mode:lighten;
+  min-height: 100%;
+}
+
 .win-rate {
   margin-top: 30px;
   text-align: center;
