--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -144,7 +144,7 @@
   }
 }
 // 詳細 大会別
-#wrapper,.contact,.notification-main {
+#wrapper,.contact,.notification {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
