--- a/app/assets/stylesheets/notification.scss
+++ b/app/assets/stylesheets/notification.scss
@@ -15,5 +15,17 @@
     margin: 0 auto;
     width: 100%;
   }
+  &-top {
+    font-weight: bold;
+    font-size: 40px;
+  }
+  &-content {
+    background-color: #EEFFFF;
+  }
+  &-title {
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+    color: #007bff;
+  }
 }
-
