--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,12 +1,17 @@
-<h3 class="text-center">通知</h3>
-    <hr>
-<% if @notifications.exists? %>
-  <div class="notification">
-    <div class="users-index">
-      <%= render @notifications %>
-      <%= paginate @notifications %>
-    </div>
+<div class="notification-content">
+  <div class="notification-title pt-5">
+    <i class="fas fa-envelope"></i>
+    通知
   </div>
-<% else %>
-    <p>通知はありません</p>
-<% end %>
+      <hr>
+  <% if @notifications.exists? %>
+    <div class="notification">
+      <div class="users-index">
+        <%= render @notifications %>
+        <%= paginate @notifications %>
+      </div>
+    </div>
+  <% else %>
+      <p>通知はありません</p>
+  <% end %>
+</div>
