--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -59,7 +59,6 @@
   &-title {
     font-size: 25px;
     color: white;
-    font-weight: bold;
   }
   &-image {
     position: absolute;
@@ -83,22 +82,11 @@
   }
 }
 
-.search-tweet {
-  min-height: 100%;
-  width: 100%;
-  background-image: image-url("sky_00010.jpg");
-  background-size: cover;
-  background-color:rgba(255,255,255,0.8);
-  background-blend-mode:lighten;
-  flex: 1 1 100%;
-}
-
 .title {
   margin-left: 32%;
   &-child {
     float: left;
     background-color: #68ccf9;
-    font-weight: bold;
     overflow: hidden;
     margin-right: 3%;
     font-size: 15px;
@@ -144,7 +132,7 @@
   }
 }
 // 詳細 大会別
-#wrapper,.contact,.notification {
+#wrapper,.contact,.notification-main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -164,9 +152,9 @@
 
 // 詳細
 .good,.good-after {
-  border: 2px solid #EEFFFF;
+  background-color: white;
+  border: 2px solid white;
   color: #C0C0C0;
-  background-color: #EEFFFF;
 }
 
 .good:hover + .fukidashi {
