--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,7 +1,6 @@
-.analysis-main,.search-ays {
+.analysis-main {
   width: 100%;
   height: 950px;
-  min-height: 100%;
   background-image: image-url("photo0000-0331.jpg");
   background-size: cover;
   background-color:#ffffff80;
@@ -25,14 +24,9 @@
     position: absolute;
     width: 10%;
   }
-  
   &:hover {
     opacity: 0.5;
   }
-}
-
-.data-info {
-  background-color: #EEFFFF;
 }
 
 .select_main{
@@ -131,24 +125,19 @@
   font-size: 30px;
   text-align: center;
   margin-top: 130px;
-  color: #68ccf9;;
-  font-weight: bold;
 }
 
 .ays-text {
-  font-size: 1.2rem;
-}
-
-.data-title {
-  color: #00CCCC;
-  font-weight: bold;
-  font-size: 1.5rem;
-  border-bottom: 2px solid #77c3df;;
+  margin-top: 40px;
+  border: 1px solid #b3b4b4;
+  width: 100%;
+  max-width: 100%;
+  min-width: 200px;
 }
 
 .reader {
-  margin-top: 3%;
-  margin-left: 20%;
+  margin-top: 110px;
+  display: flex;
 }
 
 @media screen and (max-width: 966px) {
