--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -66,11 +66,7 @@ input {
   }
   &-content {
     background-color: rgba(236, 236, 206,0.4);
-    // min-height: 780px;
-    &_tweet {
-      background-color: rgba(236, 236, 206,0.4);
-      min-height: 780px;
-    }
+    min-height: 780px;
   }
   &-user {
     font-size: 15px;
@@ -84,16 +80,11 @@ input {
     border-radius: 3px;
     transition: .4s;
     font-size: 14px;
-    // margin: 20px 0 0 40px;
-    margin-left: 24%;
+    margin: 20px 0 0 40px;
     &:hover {
       background: #fffbef;
     }
   }
-}
-
-.comment-delete {
-  margin-top: -1%;
 }
 
 @media screen and (max-width: 850px) {
