--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,3 @@
 <div class="user-content pt-5">
   <h2>参加ユーザー</h2>
-  <div class="user-list row">
-    <% @users.each do |user| %>
-      <%= render partial: "user_list",locals: {user: user}%>
-    <% end %>
-    <%= paginate @users %>
-  </div>
-</div>
+  <%= render partial: "user_list"%>
