--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -1,9 +1,4 @@
 <div class="user-content pt-5">
   <h2>フォロワー <%= @user.followers.count %>人</h2>
-  <div class="user-list row">
-    <% @users.each do |user| %>
-      <%= render partial: "user_list",locals: {user: user}%>
-    <% end %>
-    <%= paginate @users %>
-  </div>
+  <%= render partial: "user_list"%>
 </div>
