棒グラフ　雛形

--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -38,3 +38,7 @@
   </div>
   <% @n+=1%>
 <% end %>
+<div class="reader">
+  <div style="width:70%; height:70%;" ><canvas id="myBarChart"></canvas></div>
+</div>
+<%= javascript_pack_tag 'champion' %>
