--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -20,7 +20,7 @@
 <%# 大会別 %>
   <% unless current_page?("/champions/#{tournament.id}") %>
     <div class="cp-tournamet mt-5 mb-5">
-      <%= link_to "/champions/#{tournament.id}",class: "text-white" do%>
+      <%= link_to "/champions/#{tournament.id}",data: {"turbolinks" => false},class: "text-white" do%>
         <i class="fa fa-baseball-ball text-white"></i>
         <%=tournament.name%>
       <% end %>
@@ -31,14 +31,14 @@
   投票結果
 </div>
 <%# 投票結果 %>
+<div class="reader">
+  <div style="width:75%; height:75%;" ><canvas id="myBarChart"></canvas></div>
+</div>
 <% @school.each do |school| %>
   <div class="school-cp mt-5">
     <%= school.champion_school.name %>
-    <%= @num[0][@n][1] %>
+    <%= "#{@num[0][@n][1]}票" %>
   </div>
   <% @n+=1%>
 <% end %>
-<div class="reader">
-  <div style="width:70%; height:70%;" ><canvas id="myBarChart"></canvas></div>
-</div>
 <%= javascript_pack_tag 'champion' %>
