--- a/app/assets/stylesheets/champion.scss
+++ b/app/assets/stylesheets/champion.scss
@@ -1,5 +1,17 @@
 .school-cp {
   text-align: center;
+  font-weight: bold;
+}
+
+.champion-content {
+  background-color: #eef1ba;
+}
+
+.champion-title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 5%;
+  font-weight: bold;
 }
 
 .cp-tournamet {
