--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -89,6 +89,7 @@
   background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);
   background: linear-gradient(to right, #6dd5ed, #2193b0);
   color: #fff;
+  font-weight: bold;
 }
 
 .btn-green-moon {
@@ -96,6 +97,7 @@
   background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);
   background: linear-gradient(to right, #a8e063, #56ab2f);
   color: #fff;
+  font-weight: bold;
 }
 
 .btn-orange-moon {
@@ -103,6 +105,7 @@
   background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);
   background: linear-gradient(to right, #f7b733, #fc4a1a);
   color: #fff;
+  font-weight: bold;
 }
 
 .btn-cool-blues,.btn-green-moon,.btn-orange-moon {
