--- a/app/views/slide/_slide.html.erb
+++ b/app/views/slide/_slide.html.erb
@@ -1,4 +1,4 @@
-<div id="app">
+<div id="slide">
   <div class="header">
     <transition name="fade">
       <div class="slider-inner" :key="idx" v-for="(slide, idx) in slides" v-if="current_slide == idx">
