--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -30,9 +30,9 @@
       <% end %>
     </div>
   </div>
-  <div class="article-main">
+  <%# <div class="article-main">
     <%= render partial: "tweet_show"%>
-  </div>
+  <%# </div> %>
 </div>
-<%= javascript_pack_tag 'tweet' %>
+<%# <%= javascript_pack_tag 'tweet' %>
 <%= javascript_pack_tag 'main' %>
