--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -38,7 +38,7 @@
 }
 
 .text-format{
-  margin-top: 100px;
+  // padding-top: 70px;
   font-size: 25px;
   text-align: center;
   font-weight: bold;
