大会別 SPAで検索 ページネーション

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div class="wrapper">
   <div class="main-content-btn mt-1">
     <% if user_signed_in? %>
       <%= link_to "投稿する",new_tweet_path,class: "send_btn"%>
@@ -7,15 +7,16 @@
       <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch" %>
     <%end%>
   </div>
-  <div class="article-main">
+  <%# <div class="article-main"> %>
     <% if @tweet.present? %>
       <div class="text-format text-success mt-1 pt-5">
         <%= @tweet.tournament.name%>
       </div>
-      <%= render partial: "tweets/tweet_show"%>
+      <%# <%= render partial: "tweets/tweet_show"%> 
     <% else %>
       <p class="text-center mt-5">投稿はありません</p>
     <% end %>
-  </div>
+  <%# </div> %>
 </div>
 </div>
+<%= javascript_pack_tag 'main' %>
