--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -24,7 +24,7 @@
           <% end %>
         <% end %>
       </div>
-      <%= form_with(url: search_analyses_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
+      <!--<%= form_with(url: search_analyses_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
         <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
         <%= form.submit "検索", class: "search-btn" %>
       <% end %>
@@ -33,5 +33,6 @@
   <div class="analysis-main">
     <%= render partial: "analysis_show"%>
   </div>
+  -->
 </div>
-<%= javascript_pack_tag 'tweet' %>
+<%= javascript_pack_tag 'main' %>
