--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,6 +1,6 @@
 .analysis-main,.search-ays {
   width: 100%;
-  height: 950px;
+  height: 100%;
   min-height: 100%;
   background-image: image-url("photo0000-0331.jpg");
   background-size: cover;
