--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div class="wrapper">
   <div class="main-content-btn mt-1">
     <% if user_signed_in? %>
       <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
@@ -17,7 +17,7 @@
       <%= link_to "ふるさと紹介",maps_path(tournament_id: params[:id]),class: "ays-avg" %>
     </div>
   </div>
-  <div class="analysis-main">
+  <!--<div class="analysis-main">
     <% if @analysis_tournament.present? %>
       <div class="text-format text-success mt-5 pt-5 mb-４">
         <%= @analysis_tournament.tournament.name%>
@@ -27,4 +27,6 @@
       <div class="text-center mt-5">投稿はありません</div>
     <% end %>
   </div>
+-->
 </div>
+<%= javascript_pack_tag 'main' %>
