予想 ページネーション 　検索

--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -29,8 +29,8 @@
       <% end %>
     </div>
   </div>
-  <div class="forecast-main">
-    <%= render partial: "forecast_show"%>
-  </div>
+  <%# <div class="forecast-main"> %>
+    <%# <%= render partial: "forecast_show"%> %>
+  <%# </div> %>
 </div>
-<%= javascript_pack_tag 'tweet' %>
+<%= javascript_pack_tag 'main' %>
