--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -151,6 +151,11 @@
   min-height: 100vh;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .wrap {
   min-height: calc(100vh - 900px);
 }
