--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -16,7 +16,7 @@
       <div class="text-format mt-5 mb-4 text-warning">
         大会別
       </div>
-      <div class="title">
+      <div class="title pb-5">
         <% @category_parent_array.each do |tournament|%>
           <%= link_to "/tournaments/#{tournament.id}",class: "title-child text-white" do%>
             <i class="fa fa-baseball-ball text-white"></i>
@@ -25,7 +25,7 @@
         <% end %>
       </div>
       <%# <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
-        <%# <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %> %>
+        <%# <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
         <%# <%= form.submit "検索", class: "search-btn" %>
       <%# <% end %>
     </div>
