--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -10,7 +10,7 @@
 </div>
 <% if @tweet.present?%>
   <div class="text-format text-success">
-    <%= @tweet.tournament.name%>
+    <%= @category.name%>
   </div>
 <% end %>
 <%= javascript_pack_tag 'main' %>
