--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="main-content-btn mt-1">
     <% if user_signed_in? %>
-      <%= link_to "投稿する",new_tweet_path,class: "send_btn"%>
+      <%= link_to "投稿する",new_tweet_path,class: "send_btn", data: {"turbolinks" => false} %>
     <% end %>
     <% unless current_page?(root_path)%>
       <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch" %>
