--- a/app/views/tournaments/watch_avg.html.erb
+++ b/app/views/tournaments/watch_avg.html.erb
@@ -1,6 +1,6 @@
 <div class="average-content">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-  <%= link_to "大会別ページへ戻る",watch_ays_tournament_path,class: "return-btn d-inline-block mt-1"%>
+  <%= link_to "大会別ページへ戻る",watch_ays_tournament_path,class: "return-btn d-inline-block mt-1", data: {"turbolinks" => false}%>
   <h3>戦力分析の平均評価</h3>
   <% @avgs.each do |avg|%>
     <div class="avg-name text-center"><%=avg[:name]%></div>
