--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="main-content-btn mt-1">
     <% if user_signed_in? %>
-      <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
+      <%= link_to "投稿する",new_forecast_path,class: "send_btn", data: {"turbolinks" => false}%>
     <% end %>
     <% unless current_page?(root_path)%>
       <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-top" %>
