--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-top" %>
       <%end%>
     </div>
-    <div class="text-format text-success">
+    <div class="text-format text-warning mt-5">
       <%= @category.name%>
     </div>
     <p class="text-center mb-3 mt-5">優勝校を予想してみましょう</p>
