--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch" %>
       <%end%>
     </div>
-    <div class="text-format mt-5 text-success">
+    <div class="text-format mt-5 text-primary">
       <%= @category.name%>
     </div>
     <div class="text-format mt-5 mb-3 text-warning">
