--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -60,10 +60,10 @@
   margin-right: 10%;
 }
 
-.title_ays {
-  font-size: 18px;
-  margin-top: 20px;
-}
+// .title_ays {
+//   font-size: 18px;
+//   margin-top: 5px;
+// }
 
 
 .attack,.defencive,.pitcher,.comprehensive,.expectations {
