--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -12,8 +12,9 @@
 }
 
 .win-school_fcs,.lose-school_fcs{
-  margin-top: 20px;
+  // margin-top: 1px;
   font-size: 25px;
+  color: black;
 }
 
 .forecast {
