--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -1,6 +1,11 @@
 /* トップ画面 */
 *{box-sizing: border-box;
 }
+
+.analysis:hover {
+    text-decoration: none;
+}
+
 .header,.analysis_header {
   font-size: 40px;
   height: 300px;
@@ -107,18 +112,21 @@
 }
 
 .sub-title {
-  padding-top: 20px;
+  color: black;
+  padding-top: 13px;
   font-size: 18px;
 }
 
 .tweets_at,.analyses_at {
+  color: black;
   font-size: 11px;
   text-align: right;
 }
 
 .name {
   font-size: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
+  color: black;
   text-align: right;
 }
 
