文字サイズ変更

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -29,7 +29,7 @@
 
 .logo {
   font-weight: bold;
-  font-size: 2.0rem;
+  font-size: 30px;
 }
 
 .top-main {
@@ -40,6 +40,7 @@
 }
 
 .top-header {
+  font-size: 15px;
   height: 70px;
   width: 100%;
   position: relative;
