--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -52,7 +52,8 @@
 
 .go-avg {
   display: flex;
-  justify-content: space-evenly 
+  justify-content: space-evenly;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 679px) {
