文字　大きさ

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -40,6 +40,17 @@
     border: solid;
     border-color: #acafc3;
   }
+  &-info {
+    font-size: 18px;
+  }
+}
+
+.stats {
+  font-size: 18px;
+}
+
+.tabs {
+  font-size: 15px;
 }
 
 .card {
