--- a/app/views/users/_my_forecasts.html.erb
+++ b/app/views/users/_my_forecasts.html.erb
@@ -9,12 +9,12 @@
           <div class="fcs-image">
             <i class="fa fa-balance-scale text-white"></i>
           </div>
-          <div class="win-school_fs">
+          <div class="win-school_fcs">
             <p>勝利予想<p>
             <br>
             <%= forecast.win_school.name %>
           </div>
-          <div class="lose-school_fs">
+          <div class="lose-school_fcs">
             <p>敗退予想<p>
             <br>
             <%= forecast.lose_school.name %>
