優勝予想ボタン

--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -41,6 +41,7 @@
       <%= @map.school.name %>のふるさと紹介
     </div>
     <div class="map-text">
+      <p class="text-center pt-1"><%= @map.address%></p>
       <%= simple_format(@map.text) %>
     </div>
     <div class="map-image">
