--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -12,7 +12,11 @@
       <%= @category.name%>
     </div>
     <p class="text-center h4 mb-3 mt-5">優勝校を予想してみよう</p>
-    <%= link_to "優勝予想","/champions/#{@category.id}",class: "champ mt-3 mb-3" %>
+    <div class="champ">
+      <i class="fas fa-crown text-warning"></i>
+      <%= link_to "優勝予想","/champions/#{@category.id}" %>
+      <i class="fas fa-crown text-warning"></i>
+    </div>
     <div class="text-format mt-5 mb-3 text-warning">
       大会別
     </div>
