ボックスデザイン

--- a/app/views/forecasts/_list.html.erb
+++ b/app/views/forecasts/_list.html.erb
@@ -5,7 +5,7 @@
       <%= forecast.round%>
     </div>
     <div class="school-fcs">
-    <div class="fcs-image">
+    <div class="fcs-icon">
       <i class="fa fa-balance-scale text-white"></i>
     </div>
       <div class="win-school_fs">
