--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -3,7 +3,7 @@
   justify-content: space-evenly;
   text-align: center;
   font-size: 26px;
-  padding-top: 20px;
+  padding-top: 6px;
 }
 
 .text_fcs{
@@ -14,7 +14,8 @@
 .win-school_fcs,.lose-school_fcs{
   // margin-top: 1px;
   font-size: 25px;
-  color: black;
+  color: rgb(255, 253, 253);
+  font-weight: bold;
 }
 
 .forecast {
@@ -22,8 +23,10 @@
   width: 800px;
   max-width: 100%;
   margin: 0 auto;
-  border: solid 1px rgb(255, 255, 255);
-  background-color: #FFAD90;
+  // background: -moz-linear-gradient(#ffb03c, #ff708d);
+  // background: -webkit-linear-gradient(#ffb03c, #ff708d);
+  // background: linear-gradient(to right, #ffb03c, #ff708d);
+  background-color: rgb(250, 142, 42);
   position: relative;
   &:hover {
     opacity: 0.7;
