--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -13,7 +13,7 @@
       <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
     <div class="back">
-      <%= link_to "戻る",analyses_path %>
+      <%= link_to "戻る",analyses_path,data: {"turbolinks" => false} %>
     </div>
   </div>
 </div>
