--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -7,7 +7,7 @@
         <%= link_to "記事を削除する","/forecasts/#{@forecast.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
         <%= link_to "記事を編集する","/forecasts/#{@forecast.id}/edit",method: :get,class: "edit-article" %>
       <% end %>
-      <%= link_to "予想ページへ戻る",forecasts_path,class: "return-btn" %>
+      <%= link_to "予想ページへ戻る",forecasts_path,class: "return-btn",data: {"turbolinks" => false} %>
     </div>
     <div class="user_name">
       <h5>投稿者 <%= link_to "#{@forecast.user.nickname}","/users/#{@forecast.user_id}"%></h5>
