--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
       <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
       <% end %>
-      <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn" %>
+      <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn",data: {"turbolinks" => false} %>
     </div>
     <div class="user_name">
       <h5>投稿者 <%= link_to "#{@tweet.user.nickname}","/users/#{@tweet.user_id}"%></h5>
